[package]
name = "kagisora"
version = "0.1.0"
edition = "2021"

[dependencies]
aes-gcm = { version = "0.10", features = ["std"] }
anyhow = "1.0"
argon2 = { version = "0.5", features = ["std"] }
base64 = "0.22"
clap = { version = "4.0", features = ["derive"] }
rand = "0.8"
rpassword = "7.0"
rusqlite = { version = "0.29", features = ["bundled"] }